Remove use of ChatGPT

--- a/render/dashboard_template.html
+++ b/render/dashboard_template.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <!-- Calendar events section -->
+                <!-- Calendar events section - EXPANDED -->
                 <div class="col-md-6">
                     <div class="row align-items-start ">
                         <div class="col-md-12"  style="height: 50px"></div>
@@ -115,7 +115,7 @@
                     </div>
 
                     <div class="row align-items-start ">
-                        <div class="col-md-12"  style="height: 10px"></div>
+                        <div class="col-md-12"  style="height: 20px"></div>
                     </div>
 
                     <!-- Tomorrow's events -->
@@ -130,7 +130,7 @@
 
                     <!-- Day after spacer - only shown if needed -->
                     <div class="row align-items-start dayafter-spacer {dayafter_vis_class}">
-                        <div class="col-md-12" style="height: 10px"></div>
+                        <div class="col-md-12" style="height: 20px"></div>
                     </div>
 
                     <!-- Day after tomorrow's events -->
@@ -143,16 +143,9 @@
                         </div>
                     </div>
 
+                    <!-- Additional spacing to fill the freed up space -->
                     <div class="row align-items-start ">
-                        <div class="col-md-12"  style="height: 10px"></div>
-                    </div>
-
-                    <!-- Topic/Fact of the day -->
-                    <div class="row align-items-start ">
-                        <div class="col-md-12">
-                            <h2>{topic_title}</h2>
-                            <div class="did-you-know">{topic_text}</div>
-                        </div>
+                        <div class="col-md-12"  style="height: 50px"></div>
                     </div>
                 </div>
             </div>
